--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,7 @@ jobs:
             -o .pio/build/${{ matrix.pio_env }}${{ matrix.pio_env_variant }}/firmware.addrinfo \
             --build ${{ matrix.pio_env }}${{ matrix.pio_env_variant }} \
             --verbose      - if: matrix.os == 'ubuntu-latest'
+      - if: matrix.os == 'ubuntu-latest'
         name: Upload ${{ matrix.pio_env }}${{ matrix.pio_env_variant }} firmware.bin
         uses: actions/upload-artifact@v4
         with:
